<resources>
    <string name="app_name">Schedule Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email:</string>
    <string name="Password">Password:</string>
    <string name="register">Or register</string>
    <string name="SignIn">Sign in with</string>
    <string name="Login">Login</string>
    <string name="Main">Main</string>
    <string name="List"> List</string>
    <string name="Goal">Goal</string>
    <string name="me">me</string>
    <string name="main">main</string>
    <string name="settings">settings</string>
    <string name="Title">Title</string>
    <string name="Description">Description:</string>
    <string name="StartDate">Start Date:</string>
    <string name="EndDate">End Date:</string>
    <string name="Time">Time:</string>
    <string name="Duration">Duration:</string>
    <string name="Name">Name:</string>
    <string name="ConfirmPassword">Confirm Password:</string>
    <string name="SignUp">Sign Up</string>
    <string name="AddNewTask">Add New Task</string>
    <string name="Upcoming">Upcoming</string>
    <string name="CardViewTitle">Pick the plants</string>
    <string name="CardDate">15/02/2022 14:00</string>
    <string name="Categories">Categories</string>
    <string name="Timer">Timer</string>
</resources>