<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainView">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:elevation="20dp"
        android:translationZ="8dp"
        android:id="@+id/topNav"
        >

        <RelativeLayout
            android:elevation="20dp"

            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"

                >

                <TextView
                    android:id="@+id/MainTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="64dp"
                    android:layout_toLeftOf="@id/listText"
                    android:background="@drawable/green_circle"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/Main" />

                <TextView
                    android:id="@+id/listText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/List" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Goal"
                    android:id="@+id/AboutTxt"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_toRightOf="@id/listText"
                    android:layout_marginLeft="70dp"
                    />
            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <FrameLayout
        android:layout_above="@id/bottom"
        android:layout_below="@id/topNav"
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/accountsvg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/main"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/mainsvg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/settingssvg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/main"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_below="@id/icons"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/accountTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginEnd="100dp"
                android:text="@string/me"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mainTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mainTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/settingsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="52dp"
                android:layout_marginBottom="1dp"
                android:text="@string/settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/mainTxt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</RelativeLayout>