<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/usernameConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Name"

            android:fontFamily="@font/open_sans_variable_font_wdth"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/SignUpEmail"
            app:layout_constraintEnd_toEndOf="@+id/SignUpEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/SignUpEmail" />

        <EditText
            android:id="@+id/SignUpEmail"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@drawable/edit_text_custom"
            android:layout_below="@id/txtName"
            android:paddingLeft="16dp"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EmailConstraint"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:fontFamily="@font/open_sans_variable_font_wdth"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/SignUpPassword"
            app:layout_constraintEnd_toEndOf="@+id/SignUpPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/SignUpPassword" />

        <EditText
            android:id="@+id/SignUpPassword"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_below="@id/txtPassword"
            android:paddingLeft="16dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:background="@drawable/edit_text_custom"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_below="@id/passwordConstraint"
        android:id="@+id/ConfirmPasswordConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtSignUpConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/ConfirmPassword"
            android:fontFamily="@font/open_sans_variable_font_wdth"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/SignUpConfirmPassword"
            app:layout_constraintEnd_toEndOf="@+id/SignUpConfirmPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/SignUpConfirmPassword" />

        <EditText
            android:id="@+id/SignUpConfirmPassword"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@drawable/edit_text_custom"
            android:paddingLeft="16dp"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EmailConstraint"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameConstraint"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Email"

            android:fontFamily="@font/open_sans_variable_font_wdth"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/edtTxtEmail"
            app:layout_constraintEnd_toEndOf="@+id/edtTxtEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtTxtEmail" />

        <EditText
            android:id="@+id/edtTxtEmail"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@drawable/edit_text_custom"
            android:layout_below="@id/txtEmail"
            android:paddingLeft="16dp"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/bottomRelativelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ConfirmPasswordConstraint"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

        <ImageView
            android:onClick="SignUpUser"
            android:id="@+id/imgBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_eclipse" />

        <RelativeLayout
            android:id="@+id/imgEnterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="90dp">

            <ImageView
                android:onClick="SignUpUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/enter_btn" />

            <ImageButton

                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/carrot" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"

            >

            <TextView
                android:onClick="SignUpUser"
                android:id="@+id/loginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_variable_font_wdth"
                android:text="@string/SignUp"
                android:textColor="@color/white"
                android:textSize="34dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginTxt"
                android:layout_centerHorizontal="true"
                android:background="@drawable/underline" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>